// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator when the isLoading prop is false does not render the indicator 1`] = `
<View
  style={Object {}}
/>
`;

exports[`ActivityIndicator with custom testID prop uses the given testID 1`] = `
<View
  style={Object {}}
>
  <ActivityIndicator
    animating={true}
    color="gray"
    size="large"
    testID="testID"
  />
</View>
`;

exports[`ActivityIndicator with default props renders the ActivityIndicator component correctly 1`] = `
<View
  style={Object {}}
>
  <ActivityIndicator
    animating={true}
    color="gray"
    size="large"
    testID="activityIndicator-component"
  />
</View>
`;
